--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Will You Be My Valentine?</title>
+  <title>Will You Go on a Date With Me?</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     /* Reset and Base Styles */
@@ -18,12 +18,11 @@
       background-color: #111; /* Always dark */
       color: #fff; /* Always white text */
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: center; /* Center horizontally */
+      align-items: center; /* Center vertically */
       flex-direction: column;
-      min-height: 100vh;
-      padding: 20px;
-      /* Removed transition as background won't change */
+      min-height: 100vh; /* Ensures full viewport height */
+      padding: 20px; /* Padding for small screens, acts as spacing */
     }
 
     /* Headings */
@@ -77,11 +76,26 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      animation: pulse 3s infinite ease-in-out;
     }
 
     .emoji-container img {
       width: 100%;
       height: auto;
+      display: block; /* Removes extra space below image */
+    }
+
+    /* Keyframe animation for the subtle zoom */
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.02); /* Slightly zoom in */
+      }
+      100% {
+        transform: scale(1);
+      }
     }
 
     /* Confetti Canvas */
@@ -108,6 +122,14 @@
         max-width: 180px;
         margin-bottom: 30px;
       }
+
+      /* Adjust font sizes for the success message on mobile */
+      .success-message-line1 {
+        font-size: 1.5rem !important; /* Smaller for mobile */
+      }
+      .success-message-line2 {
+        font-size: 1.2rem !important; /* Smaller for mobile */
+      }
     }
   </style>
 </head>
@@ -130,7 +152,6 @@
     const yesButton = document.getElementById("yesButton");
     const noButton = document.getElementById("noButton");
     const imageContainer = document.querySelector(".emoji-container");
-    // Removed reference to darkModeToggle
 
     // Function to move the 'No' button
     const moveNoButton = () => {
@@ -177,12 +198,16 @@
       line1.style.fontSize = '2rem';
       line1.style.fontWeight = 'bold';
       line1.style.margin = '0 0 10px 0';
+      line1.classList.add('success-message-line1'); /* Add class for mobile styling */
+
 
       const line2 = document.createElement('p');
       line2.innerText = 'DM me the time and venue 😉';
       line2.style.fontSize = '1.8rem';
       line2.style.fontWeight = 'normal';
       line2.style.margin = '0';
+      line2.classList.add('success-message-line2'); /* Add class for mobile styling */
+
 
       container.appendChild(line1);
       container.appendChild(line2);
