Add Open Graph meta tags to index.html
Added Open Graph meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Momo Khane Chalein?</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+  <meta property="og:title" content="btao btao" />
+  <meta property="og:description" content="Momo Khane Chalein? Click here and press 'Yes'! 😋" />
+  <meta property="og:image" content="https://i.ibb.co/XZn9zyj/eye.png" /> 
+  <meta property="og:url" content="https://www.yourliveurl.com/index.html" /> 
+  <meta property="og:type" content="website" />
   <style>
     * {
       margin: 0;
@@ -113,7 +119,7 @@
   <h1>Momo khane chalein?</h1>
 
   <div class="emoji-container">
-    <img src="https://i.ibb.co/XZn9zyjb/eye.png" alt="Shy Emoji" class="eye-img">
+    <img src="https://i.ibb.co/XZn9zyj/eye.png" alt="Shy Emoji" class="eye-img">
   </div>
 
   <div class="button-container">
@@ -210,3 +216,4 @@
   </script>
 </body>
 </html>
+
