--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Momo Khane Chalein?</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  
-  <meta property="og:title" content="btao btao" />
-  <meta property="og:description" content="Momo Khane Chalein? Click here and press 'Yes'! 😋" />
-  <meta property="og:image" content="https://i.ibb.co/XZn9zyj/eye.png" /> 
-  <meta property="og:url" content="https://www.yourliveurl.com/index.html" /> 
+  <title>Btao btao!</title>
+
+  <!-- 🌐 Open Graph Meta Tags for Link Preview -->
+  <meta property="og:title" content="Btao btao!" />
+  <meta property="og:description" content="A fun little invitation — click and find out 😉" />
+  <meta property="og:image" content="https://i.ibb.co/PZJZ502/29.jpg" />
+  <meta property="og:url" content="https://devrawhul.github.io/Choosewisely/>
   <meta property="og:type" content="website" />
+
+  <!-- 🐦 Twitter Card (optional) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Btao btao! Momo khane chalein?">
+  <meta name="twitter:description" content="A fun little invitation — click and find out 😉">
+  <meta name="twitter:image" content="https://i.ibb.co/PZJZ502/29.jpg">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
+    /* Your existing CSS */
     * {
       margin: 0;
       padding: 0;
@@ -21,7 +33,7 @@
 
     html, body {
       height: 100vh;
-      overflow: hidden; /* prevent scrolling */
+      overflow: hidden;
     }
 
     body {
@@ -119,190 +131,7 @@
   <h1>Momo khane chalein?</h1>
 
   <div class="emoji-container">
-    <img src="https://i.ibb.co/XZn9zyj/eye.png" alt="Shy Emoji" class="eye-img">
-  </div>
-
-  <div class="button-container">
-    <button id="yesButton">Yes 😋</button>
-    <button id="noButton">No 😢</button>
-  </div>
-
-  <canvas id="confetti-canvas"></canvas>
-
-  <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.0.18/dist/index.min.js"></script>
-  <script>
-    const yesButton = document.getElementById("yesButton");
-    const noButton = document.getElementById("noButton");
-    const imageContainer = document.querySelector(".emoji-container");
-
-    const moveNoButton = () => {
-      const x = Math.random() * (window.innerWidth - noButton.clientWidth);
-      const y = Math.random() * (window.innerHeight - noButton.clientHeight);
-      noButton.style.position = "absolute";
-      noButton.style.left = `${x}px`;
-      noButton.style.top = `${y}px`;
-    };
-
-    yesButton.addEventListener("click", () => {
-      yesButton.style.display = 'none';
-      noButton.style.display = 'none';
-      imageContainer.style.display = 'none';
-      document.querySelector('h1').style.display = 'none';
-
-      const confettiElement = document.getElementById('confetti-canvas');
-      const confettiSettings = {
-        target: confettiElement,
-        max: 500,
-        size: 1,
-        animate: true,
-        props: ['circle', 'square', 'triangle', 'line'],
-        colors: [[165,104,246],[230,61,135],[0,199,228],[253,214,126]],
-        clock: 25,
-        rotate: true,
-        start_from_edge: true,
-        respawn: true
-      };
-      const confetti = new ConfettiGenerator(confettiSettings);
-      confetti.render();
-
-      const container = document.createElement('div');
-      container.style.position = 'absolute';
-      container.style.top = '50%';
-      container.style.left = '50%';
-      container.style.transform = 'translate(-50%, -50%)';
-      container.style.textAlign = 'center';
-
-      const line1 = document.createElement('p');
-      line1.innerText = 'Yayy! Momo party confirmed 🎉';
-      line1.style.fontSize = '2rem';
-      line1.style.fontWeight = 'bold';
-      line1.style.margin = '0 0 10px 0';
-
-      const line2 = document.createElement('p');
-      line2.innerText = 'DM me the time and place 😉';
-      line2.style.fontSize = '1.8rem';
-      line2.style.fontWeight = 'normal';
-      line2.style.margin = '0 0 20px 0';
-
-      const chatBtn = document.createElement('a');
-      chatBtn.href = 'https://wa.me/919319400647?text=Chalo%20chale%20%F0%9F%98%8B';
-      chatBtn.target = '_blank';
-      chatBtn.innerText = 'Chat Now 💬';
-      chatBtn.style.display = 'inline-block';
-      chatBtn.style.marginTop = '20px';
-      chatBtn.style.padding = '12px 30px';
-      chatBtn.style.backgroundColor = '#25D366';
-      chatBtn.style.color = '#fff';
-      chatBtn.style.textDecoration = 'none';
-      chatBtn.style.borderRadius = '8px';
-      chatBtn.style.fontSize = '1.2rem';
-      chatBtn.style.fontWeight = '600';
-      chatBtn.style.transition = 'background 0.3s ease';
-      chatBtn.addEventListener('mouseover', () => {
-        chatBtn.style.backgroundColor = '#1ea955';
-      });
-
-      container.appendChild(line1);
-      container.appendChild(line2);
-      container.appendChild(chatBtn);
-      document.body.appendChild(container);
-    });
-
-    noButton.addEventListener("mouseover", moveNoButton);
-    noButton.addEventListener("touchstart", (e) => {
-        e.preventDefault();
-        moveNoButton();
-    });
-  </script>
-</body>
-</html>
-
-
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-
-    .button-container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    button {
-      padding: 12px 30px;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    #yesButton {
-      background-color: #ff4081;
-      color: white;
-    }
-
-    #yesButton:hover {
-      background-color: #e73370;
-      transform: scale(1.1);
-    }
-
-    #noButton {
-      background-color: #444;
-      color: white;
-      transition: none;
-    }
-
-    #noButton:hover {
-      background-color: #666;
-    }
-
-    .emoji-container {
-      margin-bottom: 40px;
-      max-width: 250px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .emoji-container img {
-      width: 100%;
-      height: auto;
-    }
-
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      pointer-events: none;
-    }
-
-    @media (max-width: 500px) {
-      h1 {
-        font-size: 1.6rem;
-        margin-bottom: 30px;
-      }
-
-      button {
-        font-size: 1rem;
-        padding: 10px 20px;
-      }
-
-      .emoji-container {
-        max-width: 180px;
-        margin-bottom: 30px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>Momo khane chalein?</h1>
-
-  <div class="emoji-container">
-    <img src="https://i.ibb.co/XZn9zyj/eye.png" alt="Shy Emoji" class="eye-img">
+    <img src="https://i.ibb.co/XZn9zyjb/eye.png" alt="Shy Emoji" class="eye-img">
   </div>
 
   <div class="button-container">
