--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Btao btao!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- 🌐 Open Graph Meta Tags for Link Preview -->
-  <meta property="og:title" content="Btao btao!" />
-  <meta property="og:description" content="A fun little invitation — click and find out 😉" />
-  <meta property="og:image" content="https://i.ibb.co/PZJZ502/29.jpg" />
-  <meta property="og:url" content="https://devrawhul.github.io/Choosewisely/>
-  <meta property="og:type" content="website" />
+  <title>Btao btao</title>
+  <meta name="description" content="Ek decision lena mushkil hai 😋">
 
-  <!-- 🐦 Twitter Card (optional) -->
+  <!-- Open Graph (Telegram, WhatsApp, Facebook) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Btao btao">
+  <meta property="og:description" content="Ek decision lena mushkil hai 😋">
+  <meta property="og:image" content="https://i.ibb.co/PZJZ5029/preview.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="600">
+  <meta property="og:image:height" content="400">
+
+  <!-- Twitter Card (optional but helpful) -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Btao btao! Momo khane chalein?">
-  <meta name="twitter:description" content="A fun little invitation — click and find out 😉">
-  <meta name="twitter:image" content="https://i.ibb.co/PZJZ502/29.jpg">
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="twitter:title" content="Btao btao">
+  <meta name="twitter:description" content="Ek decision lena mushkil hai 😋">
+  <meta name="twitter:image" content="https://i.ibb.co/PZJZ5029/preview.jpg">
 
   <style>
     /* Your existing CSS */
